# DREiMac

./: .buildinfo  .coveragerc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CSMSSMTools.py  CircularCoordinates.py  CircularCoords.html  CliqueAlgorithms.py  Curto.mat  DGMTools.py  Debugging.js  GreedyPermutations.cpp  GreedyPermutations.html  Hodge.py  HorseWhinnies.py  HorseWhinniesBlocks.py  LICENSE  Laplacian.py  ProjectiveCoordinates.py  README.md  SlidingWindow.py  Synthetic1DPeriodTests.py  TDA.py  TDAUtils.py  a.out.js  a.out.wasm  api.html  circularcoords.js  codecov.yml  debugging.js  dreimac.js  dreimacutils.js  faq.html  genindex.html  index.html  objects.inv  plotting.js  pyproject.toml  requirements.txt  (+13 more)
.doctrees/: api.doctree  environment.pickle  faq.doctree  index.doctree  theory.doctree
_sources/: api.rst.txt
docs/: api.rst  conf.py  faq.rst  index.rst  requirements.txt  theory.rst
dreimac/: CSMSSMTools.py  CircularCoordinates.py  InteractivePlotUtils.py  ProjectiveCoordinates.py  TDAUtils.py  Utils.py  __init__.py  circularcoords.py  combinatorial.py  complexprojectivecoords.py  emcoords.py  geomtools.py  lenscoords.py  plotting_utils.py  projectivecoords.py  toroidalcoords.py  utils.py
dreimacjs/: CircularCoords.html  plotting.js  ripser-worker.js  ripser.cpp  ripser.html  ripser.js  ripserem.js  ripserem.wasm  tadasets.js  tda.js  tests.html
notebooks/: Circular_JointPlots.ipynb  ImagePatches-test-no-lift.ipynb  ImagePatches.html  ImagePatches.ipynb  ImagePatches_Interactive.ipynb  MooreSpace.html  Torus_Interactive.ipynb  Trefoil.ipynb  bullseye.html  bullseye.ipynb  circleLensCoordinates.html  circleLensCoordinates.ipynb  coil20.html  coil20.ipynb  complexProjectiveOnGenusTwoSurface.html  example_S2_a.mlx  genusTwoSurface.html  genusTwoSurface.ipynb  movingDot.html  movingDot.ipynb  parameter_n_samples.html  parameter_perc.html  parameter_perc.ipynb  twoSphere.html  (+7 more)
(+49 files in other folders)
