[build-system]
requires = ["setuptools >= 61.0", "build", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreimac"
dynamic = ["version"]
description = "DREiMac: Dimensionality reduction with Eilenberg-MacLane coordinates"
readme = "README.md"
authors = [
  { name = "Jose A. Perea", email = "joperea@gmail.com" },
  { name = "Luis Scoccola", email = "luis.scoccola@gmail.com" },
  { name = "Chris Tralie", email = "chris.tralie@gmail.com" },
]
maintainers = [
  { name = "Jose A. Perea", email = "joperea@gmail.com" },
  { name = "Luis Scoccola", email = "luis.scoccola@gmail.com" },
  { name = "Chris Tralie", email = "chris.tralie@gmail.com" },
]

requires-python = ">=3.8, <3.12"

dependencies = [
  "matplotlib >= 3.6",
  "numba >= 0.56",
  "numpy >= 1.23",
  "persim >=0.3",
  "ripser >= 0.6",
  "scipy >=1.10",
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
]

keywords = ["dimensionality reduction", "topological data analysis"]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

docs = ["sphinx", "sphinx_rtd_theme", "numpydoc", "ipykernel", "nbsphinx"]

[project.urls]
Homepage = "https://dreimac.scikit-tda.org"
Documentation = "https://dreimac.scikit-tda.org"
Repository = "https://github.com/scikit-tda/DREiMac"
Issues = "https://github.com/scikit-tda/DREiMac/issues"
